--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,6 +34,9 @@ jobs:
           CHAT_ID: ${{ secrets.CHAT_ID }}
           
         run: |
+          rm -rf /home/user/.wdm
+          pip uninstall webdriver-manager
+          pip install webdriver-manager==4.0.1
           python main.py
             
           done
