--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,6 +33,5 @@ jobs:
           TG_TOK: ${{ secrets.TG_TOK }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
           
-        run: |
-          python main.py
-        done
+      - name: avvia
+        run: python main.py
